fix default img for recipes, recipes render on tablet and check for default avatar

--- a/src/components/RecipeList/RecipeList.module.scss
+++ b/src/components/RecipeList/RecipeList.module.scss
@@ -14,8 +14,11 @@
 
 .columns-3 {
   @media (min-width: 768px) {
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
   }
+    @media (min-width: 1440px) {
+      grid-template-columns: repeat(3, 1fr);
+    }
 }
 
 .columns-4 {
